# notice

./: .gitignore  Cargo.toml  README.md  docker-compose.yaml  phase1.md  phase2.md
config/: meilibridge.yaml
crates/notice-ai/: Cargo.toml
crates/notice-ai/src/: lib.rs
crates/notice-auth/: Cargo.toml  auth.md
crates/notice-auth/src/: lib.rs
crates/notice-classifier/: Cargo.toml
crates/notice-classifier/src/: lib.rs
crates/notice-core/: Cargo.toml
crates/notice-core/src/: config.rs  error.rs  lib.rs  types.rs
crates/notice-crawler/: Cargo.toml  crawler.md
crates/notice-crawler/src/: discovery.rs  lib.rs  links.rs  rate_limiter.rs  robots.rs  scraper_engine.rs  worker.rs
crates/notice-db/: Cargo.toml
crates/notice-db/src/: crawl_queue.rs  documents.rs  knowledge_graph.rs  lib.rs  query_summaries.rs  search_history.rs  users.rs
crates/notice-kg/: Cargo.toml  knowledge_graph.md
crates/notice-kg/src/: context.rs  extractor.rs  lib.rs  session.rs  updater.rs
crates/notice-search/: Cargo.toml  search.md
crates/notice-search/src/: lib.rs
crates/notice-server/: Cargo.toml
crates/notice-server/src/: error.rs  main.rs  middleware.rs  state.rs
crates/notice-server/src/routes/: auth.rs  content.rs  health.rs  kg.rs  mod.rs  search.rs
docker/: init-db.sql
interface/: README.md  index.html  next.config.ts  package-lock.json  package.json  vite.config.ts
interface/app/: globals.css  layout.tsx  page.tsx
interface/app/login/: page.tsx
interface/app/profile/: page.tsx
interface/app/register/: page.tsx
interface/app/search/: page.tsx
interface/components/blocks/: calculator_block.tsx  converter_block.tsx  timer_block.tsx  universal_block.tsx
interface/components/blocks/concept_query_blocks/: how_block.tsx  what_block.tsx  when_block.tsx  where_block.tsx  who_block.tsx
interface/components/blocks/snippet_blocks/: calculator_block.tsx
interface/components/indexer/: indexer.tsx
interface/components/instant_answer/: instant_answer.tsx
interface/components/search_bar/: search_bar.tsx
interface/components/search_results/: ai_answer.tsx  search_results.tsx  summary.tsx
interface/components/submit_url/: submit_url.tsx
interface/components/ui/: article.tsx  skeleton.tsx
interface/components/website/: website_list.tsx  website_modal.tsx
interface/lib/: api.ts  auth.tsx
interface/mock_data/: website_mock_data.ts
interface/modules/forms/: query_search_form.tsx
interface/modules/navbar/: navbar.tsx
interface/src/: App.vue  globals.css
interface/stores/: search_store.ts
interface/theme/: theme_provider.tsx  theme_switcher.tsx
migrations/: 0004_query_summaries.sql  20250101000001_initial.sql  20250102000001_drop_knowledge_graph.sql  20250103000001_add_quality_score.sql
server/: .env  Cargo.toml  DEVELOPMENT_GUIDE.md  README.md
server/src/: calculator.rs  classifier.rs  currency.rs  db.rs  gemini.rs  indexer.rs  main.rs  spell.rs  web.rs
