[package]
name = "server"
version = "0.1.0"
edition = "2024"

[dependencies]
axum = "0.8.8"
dotenv = "0.15.0"
regex = "1.12.3"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0.149"
tokio = { version = "1.49", features = ["full"] }
tower-http = { version = "0.5", features = ["cors"] }
meval = "0.2"
scraper = "0.20"
urlencoding = "2.1"
symspell = { version = "0.3", features = [] }
reqwest = { version = "0.12", features = ["json"] }
