[package]
name = "server"
version = "0.1.0"
edition = "2024"

[dependencies]
axum = "0.8.8"
dotenv = "0.15.0"
regex = "1.12.3"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0.149"
tokio = { version = "1.49", features = ["full"] }
tower-http = { version = "0.5", features = ["cors"] }
meval = "0.2"
scraper = "0.20"
urlencoding = "2.1"
symspell = { version = "0.3", features = [] }
reqwest = { version = "0.12", features = ["json"] }
sqlx = { version = "0.8.6", features = ["runtime-tokio", "postgres", "chrono"] }
tracing = "0.1.44"
tracing-subscriber = "0.3.22"
meilisearch-sdk = "0.32.0"
sha2 = "0.10.9"
hex = "0.4.3"
chrono = { version = "0.4.43", features = ["serde"] }
