[package]
name = "notice-kg"
version.workspace = true
edition.workspace = true

[dependencies]
notice-core = { workspace = true }
notice-db = { workspace = true }
notice-ai = { workspace = true }

sqlx = { workspace = true }
uuid = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
tracing = { workspace = true }
