[package]
name = "notice-search"
version = { workspace = true }
edition = { workspace = true }

[dependencies]
notice-core = { workspace = true }
meilisearch-sdk = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
tracing = { workspace = true }
uuid = { workspace = true }
