[package]
name = "notice-server"
version.workspace = true
edition.workspace = true

[dependencies]
# Internal crates
notice-core = { workspace = true }
notice-db = { workspace = true }
notice-search = { workspace = true }
notice-ai = { workspace = true }
notice-classifier = { workspace = true }
notice-crawler = { workspace = true }
notice-kg = { workspace = true }
notice-auth = { workspace = true }

# Web framework
axum = { workspace = true }
tower = { workspace = true }
tower-http = { workspace = true }
tokio = { workspace = true }

# Serialization
serde = { workspace = true }
serde_json = { workspace = true }

# Logging
tracing = { workspace = true }
tracing-subscriber = { workspace = true }

# Utils
dotenvy = { workspace = true }
uuid = { workspace = true }
url = { workspace = true }

# Database
sqlx = { workspace = true }
